[package]
name = "btc-wallet-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk = { version = "0.30", features = ["all-keys", "bip39", "rusqlite"] }
bitcoin = { version = "0.32", features = ["std", "serde", "rand-std"] }
bitcoin_hashes = "0.14"
bip39 = { version = "2", features = ["std", "rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
hex = "0.4"
base64 = "0.22"
dirs = "5.0"

[features]
default = ["interactive"]
interactive = ["bdk/keys-bip39", "bdk/bip39"]
